# snr8503x-rs

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
snr8503-pac/: Cargo.toml  device.x
snr8503-pac/src/: adc.rs  aon.rs  cmp.rs  dma.rs  dsp.rs  exti.rs  flash_ctrl.rs  gpio0.rs  hall.rs  i2c.rs  lib.rs  mcpwm.rs  misc.rs  spi.rs  timer0.rs  uart0.rs
snr8503-pac/src/adc/: adc_amc.rs  adc_cfg.rs  adc_chn0.rs  adc_chn1.rs  adc_chn2.rs  adc_chnt.rs  adc_dat.rs  adc_dc.rs  adc_gen.rs  adc_hth.rs  adc_ie.rs  adc_if.rs  adc_lth.rs  adc_swt.rs
snr8503-pac/src/aon/: aon_evt_rcd.rs  aon_io_wake_en.rs  aon_io_wake_pol.rs  aon_pwr_cfg.rs  iwdg_cfg.rs  iwdg_clr.rs  iwdg_cnt.rs  iwdg_psw.rs  iwdg_rth.rs  iwdg_wth.rs
snr8503-pac/src/cmp/: cmp_blcwin.rs  cmp_cfg.rs  cmp_data.rs  cmp_ie.rs  cmp_if.rs  cmp_tclk.rs
snr8503-pac/src/dma/: dma_ccr.rs  dma_ctms.rs  dma_ctrl.rs  dma_dadr.rs  dma_ie.rs  dma_if.rs  dma_ren.rs  dma_sadr.rs
snr8503-pac/src/dsp/: dsp_did.rs  dsp_dis.rs  dsp_quo.rs  dsp_rad.rs  dsp_rem.rs  dsp_sqrt.rs
snr8503-pac/src/exti/: clko_sel.rs  exti_cr0.rs  exti_cr1.rs  exti_ie.rs  exti_if.rs
snr8503-pac/src/flash_ctrl/: flash_addr.rs  flash_cfg.rs  flash_erase.rs  flash_protect.rs  flash_rdata.rs  flash_ready.rs  flash_wdata.rs
snr8503-pac/src/gpio0/: gpio_brr.rs  gpio_bsrr.rs  gpio_f3210.rs  gpio_f7654.rs  gpio_fba98.rs  gpio_ffedc.rs  gpio_pdi.rs  gpio_pdo.rs  gpio_pflt.rs  gpio_pie.rs  gpio_pode.rs  gpio_poe.rs  gpio_pue.rs
src/: delay.rs  gpio.rs  main.rs
svd/: device_snr8503pm.yaml  regs.h  skeleton.svd  skeleton.svd.patched
(+102 files in other folders)
